# metallic

./: .gitignore  CMakeLists.txt  requirements.txt
cmake/: metal_kernels.hpp.in
example_lstm/: __init__.py  data.py  example_lstm.ipynb  training.py
example_resnet/: __init__.py  data.py  example_resnet.ipynb  resnet.py
python/: autograd.py  init.py  nn.py  ops.py  optim.py  tensor.py
python/backend_ndarray/: __init__.py  ndarray.py  ndarray_backend_numpy.py
src/: kernels.metal  ndarray_backend.cpp
